--- a/app.json
+++ b/app.json
@@ -13,11 +13,20 @@
       "android"
     ],
     "ios": {
-      "bundleIdentifier": "com.blumaze.client",
-      "supportsTablet": false
+      "bundleIdentifier": "com.blumaze.enatech",
+      "supportsTablet": false,
+      "googleServicesFile": "./GoogleService-Info.plist",
+      "infoPlist": {
+        "NSLocationWhenInUseUsageDescription": "Blu Maze needs your location to show nearby drivers and calculate trip routes.",
+        "NSLocationAlwaysAndWhenInUseUsageDescription": "Blu Maze needs your location to show nearby drivers and track your trip."
+      },
+      "config": {
+        "googleMapsApiKey": "AIzaSyDh-1JWqpK2QuqAz5a9yDL-MHmNEDp6kgQ"
+      }
     },
     "android": {
-      "package": "com.blumaze.client",
+      "package": "com.blumaze.enatech",
+      "googleServicesFile": "./google-services.json",
       "adaptiveIcon": {
         "backgroundColor": "#000000",
         "foregroundImage": "./assets/images/android-icon-foreground.png",
@@ -25,7 +34,18 @@
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "permissions": [
+        "ACCESS_COARSE_LOCATION",
+        "ACCESS_FINE_LOCATION",
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION"
+      ],
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyDh-1JWqpK2QuqAz5a9yDL-MHmNEDp6kgQ"
+        }
+      }
     },
     "web": {
       "output": "static",
@@ -33,6 +53,12 @@
     },
     "plugins": [
       "expo-router",
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow Blu Maze to use your location to show nearby drivers and calculate trip routes."
+        }
+      ],
       [
         "expo-splash-screen",
         {
@@ -44,11 +70,20 @@
             "backgroundColor": "#000000"
           }
         }
-      ]
+      ],
+      "@react-native-firebase/app",
+      "@react-native-firebase/auth",
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "d82ba390-d33b-471a-b038-0d48b582d4e5"
+      }
     }
   }
 }
